<resources>
    <string name="app_name">SIM Laboratory</string>
    <string name="login">Login</string>
    <string name="alert">Alert</string>
    <string name="keys">Keys</string>
    <string name="bhp">BHP</string>
    <string name="borrowing">Borrowing</string>
    <string name="salary">Salary</string>
    <string name="certificate">Certificate</string>
    <string name="complain">Complain</string>
    <string name="receiving">Receiving</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="input_nim">Input NIM</string>
    <string name="name">Name</string>
    <string name="input_name">Input Name</string>
    <string name="submit">Submit</string>
    <string name="pin">PIN</string>
    <string name="vendor">Vendor</string>
    <string name="laboran">Laboran</string>
    <string name="aslab">Aslab</string>
    <string name="hour">Hour</string>
    <string name="lab">Lab</string>
    <string name="code">Code</string>
    <string name="mk">MK</string>
    <string name="taker">Taker</string>
    <string name="hp">HP</string>
    <string name="take">Take</string>
    <string name="take_hour">Take Hour</string>
    <string name="return_key">Return</string>
    <string name="borrower">Borrower</string>
    <string name="nip_nim">NIP/NIM</string>
    <string name="event">Event</string>
    <string name="date">Date</string>
    <string name="representative">Representative</string>
    <string name="my_self">My Self</string>
    
    
    <string name="category">Category</string>
    <string name="facility">Facility</string>
    <string name="service">Services</string>
</resources>
