<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/abu"
    tools:context="com.ichigohoshimiya.frontoffice.ComplainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@color/putih">
        <ImageView
            android:layout_marginLeft="@dimen/dimen_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_complain"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/complain"
            android:textColor="@color/hitam"
            android:textSize="18sp"/>
    </LinearLayout>
    <ImageView
        android:id="@+id/history"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_history"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="520dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"/>
            <EditText
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:hint="@string/input_name"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category"/>
            <Spinner
                android:id="@+id/pilih_category"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"
                android:layout_gravity="right"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Description"/>
            <EditText
                android:layout_width="250dp"
                android:layout_height="85dp"/>
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="300dp"
            android:text="@string/submit"
            android:background="@drawable/button_putih"/>
    </LinearLayout>
</LinearLayout>
