<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/abu"
    android:orientation="vertical"
    tools:context="com.ichigohoshimiya.frontoffice.SalaryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@color/putih">
        <ImageView
            android:layout_marginLeft="@dimen/dimen_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_salary" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/salary"
            android:textColor="@color/hitam"
            android:textSize="18sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="48dp">
        <EditText
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:hint="@string/input_nim"/>
        <Button
            android:id="@+id/search_salary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:background="@drawable/button_putih"/>
    </LinearLayout>
</LinearLayout>
