<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/abu"
    tools:context="com.ichigohoshimiya.frontoffice.HomeActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="16dp">
        <LinearLayout
            android:layout_width="@dimen/width_110"
            android:layout_height="@dimen/height_110"
            android:orientation="vertical"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="32dp"
            android:background="@drawable/border">
            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:src="@drawable/ic_alert"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alert"
                android:textSize="24sp"
                android:textColor="#000000"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="@dimen/width_110"
            android:layout_height="@dimen/height_110"
            android:orientation="vertical"
            android:layout_marginRight="32dp"
            android:background="@drawable/border">
            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:src="@drawable/ic_key"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/keys"
                android:textSize="24sp"
                android:textColor="#000000"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="@dimen/width_110"
            android:layout_height="@dimen/height_110"
            android:orientation="vertical"
            android:layout_marginRight="32dp"
            android:background="@drawable/border">
            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:src="@drawable/ic_bhp"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bhp"
                android:textSize="24sp"
                android:textColor="#000000"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="@dimen/width_110"
            android:layout_height="@dimen/height_110"
            android:orientation="vertical"
            android:layout_marginRight="32dp"
            android:background="@drawable/border">
            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:src="@drawable/ic_borrowing"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/borrowing"
                android:textSize="24sp"
                android:textColor="#000000"
                android:layout_gravity="center"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="16dp">
        <LinearLayout
            android:layout_width="@dimen/width_110"
            android:layout_height="@dimen/height_110"
            android:orientation="vertical"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="32dp"
            android:background="@drawable/border">
            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:src="@drawable/ic_salary"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/salary"
                android:textSize="24sp"
                android:textColor="#000000"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="@dimen/width_110"
            android:layout_height="@dimen/height_110"
            android:orientation="vertical"
            android:layout_marginRight="32dp"
            android:background="@drawable/border">
            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:src="@drawable/ic_certificate"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/certificate"
                android:textSize="24sp"
                android:textColor="#000000"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="@dimen/width_110"
            android:layout_height="@dimen/height_110"
            android:orientation="vertical"
            android:layout_marginRight="32dp"
            android:background="@drawable/border">
            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:src="@drawable/ic_complain"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/complain"
                android:textSize="24sp"
                android:textColor="#000000"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="@dimen/width_110"
            android:layout_height="@dimen/height_110"
            android:orientation="vertical"
            android:background="@drawable/border"
            android:layout_marginRight="32dp">
            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:src="@drawable/ic_receiving"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/receiving"
                android:textSize="24sp"
                android:textColor="#000000"
                android:layout_gravity="center"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
